// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FollowButton /> renders followed button 1`] = `
<a
  className="card-btn card-btn-theme profile-action"
  href=""
  onClick={[Function]}
>
  <Icon
    className="font-30 mr-5"
    type="icon-user-star-circle"
  />
  <span>
    <span
      className="font-14 font-medium"
    >
      <FormattedMessage
        id="portfolio.unfollow"
        values={Object {}}
      />
    </span>
    <br />
    <span
      className="sidebar-subtext-color"
    >
      77
    </span>
  </span>
</a>
`;

exports[`<FollowButton /> renders unfollowed button 1`] = `
<a
  className="card-btn card-btn-theme profile-action"
  href=""
  onClick={[Function]}
>
  <Icon
    className="font-30 mr-5"
    type="icon-user-star-circle"
  />
  <span>
    <span
      className="font-14 font-medium"
    >
      <FormattedMessage
        id="portfolio.follow"
        values={Object {}}
      />
    </span>
    <br />
    <span
      className="sidebar-subtext-color"
    >
      77
    </span>
  </span>
</a>
`;
